--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
    <link rel="stylesheet" type="text/css" href="res/css/fontawesome/css/all.css">
    <link rel="stylesheet" type="text/css" href="res/css/fontawesome/css/brands.css">
-   <link rel="stylesheet" type="text/css" href="res/css/style.css">
+   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
