--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ div.brand a {
     text-decoration: none;
 }
 section#landing {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/lap2.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/lap2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
