--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@ div.brand a {
     text-decoration: none;
 }
 section#landing {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/lap2.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("
+![image](https://user-images.githubusercontent.com/52763841/73627625-b87f5480-464d-11ea-9928-a65ff9dbb64f.png)
+
+");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
